# mnist

./: Cargo.toml  README.md  justfile  weights.json
.github/workflows/: ci.yml
src/: app.rs  arguments.rs  config.rs  dataset.rs  main.rs  math.rs  network.rs  subcommand.rs
src/subcommand/: app.rs  predict.rs  train.rs
