[package]
name = "nn"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
image = "0.25.2"
indicatif = "0.17.8"
ndarray = { version = "0.16.0", features = ["serde"] }
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"

[dev-dependencies]
approx = "0.5.1"
ndarray-rand = "0.15.0"
tempdir = "0.3.7"
